Add remaining layers and on-hover feature

--- a/public/index.html
+++ b/public/index.html
@@ -16,18 +16,31 @@
         <style>
             body { margin: 0; }
 
+            p {
+                    color: white";
+            }
+
             #map {
                 width: 100vw;
                 height: 100vh;
             }
+
+            #tooltip {
+                position: absolute; 
+                background: white;
+                opacity: 0.7;
+                margin: 10px; 
+                padding: 10px;
+            }
+
         </style>
     </head>
 
     <body>
 
-        <div id="map">
+        <div id="map"></div>
 
-        </div>
+        <div id="tooltip"></div>
 
     </body>
 
